まだまだ改善は必要だけど画像保存成功

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 project(CGexe)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(.)
 
@@ -19,7 +19,17 @@ add_executable(CGexe
         random.h
         TriMesh.cpp
         TriMesh.h
+        Image.cpp
+        Image.h
+        Color.cpp
+        Color.h
 )
+
+#find_package(OpenCV CONFIG REQUIRED)
+#target_link_libraries(${PROJECT_NAME} PRIVATE opencv_ml opencv_dnn opencv_core opencv_flann)
+
+find_package(OpenCV CONFIG REQUIRED)
+target_link_libraries(${PROJECT_NAME} PUBLIC opencv_ml opencv_dnn opencv_core opencv_flann opencv_imgcodecs opencv_highgui )
 
 find_package(Eigen3 CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
